// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Filters /> Default story renders snapshot 1`] = `
<div
  aria-hidden="false"
  class="drawer__container drawer__container--is-active filters-drawer__container"
>
  <article
    aria-labelledby=":r0:"
    aria-modal="true"
    class="drawer filters-drawer"
    role="dialog"
    tabindex="0"
  >
    <header
      class="drawer__header"
    >
      <h3
        class="heading heading--size-headline-sm filters-drawer__title"
        id=":r0:"
      >
        Filters
      </h3>
      <button
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral button button--icon"
        type="button"
      >
        <svg
          class="icon"
          fill="currentColor"
          height="1.5rem"
          role="img"
          style="--icon-size: 1.5rem;"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            close filters
          </title>
          <path
            d="M18.3 5.71c-.39-.39-1.02-.39-1.41 0L12 10.59 7.11 5.7c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
          />
        </svg>
      </button>
    </header>
    <div
      class="drawer__body filters-drawer__body"
    >
      <fieldset
        class="fieldset filters-fieldset"
      >
        <legend
          class="fieldset-legend filters-fieldset__legend"
        >
          Filters Segment 1
           
        </legend>
        <div
          class="fieldset-items filters-fieldset__checkboxes"
        >
          <div
            class="checkbox"
          >
            <input
              class="checkbox__input"
              id=":r1:"
              type="checkbox"
            />
            <label
              class="label label--lg"
              for=":r1:"
            >
              Filters label 1
            </label>
          </div>
          <div
            class="checkbox"
          >
            <input
              class="checkbox__input"
              id=":r2:"
              type="checkbox"
            />
            <label
              class="label label--lg"
              for=":r2:"
            >
              Filters label 2
            </label>
          </div>
          <div
            class="checkbox"
          >
            <input
              class="checkbox__input"
              id=":r3:"
              type="checkbox"
            />
            <label
              class="label label--lg"
              for=":r3:"
            >
              Filters label 3
            </label>
          </div>
        </div>
      </fieldset>
    </div>
  </article>
</div>
`;

exports[`<Filters /> OverflowInteractive story renders snapshot 1`] = `
<div
  aria-hidden="false"
  class="drawer__container drawer__container--is-active filters-drawer__container"
>
  <article
    aria-labelledby=":rc:"
    aria-modal="true"
    class="drawer filters-drawer"
    role="dialog"
    tabindex="0"
  >
    <header
      class="drawer__header"
    >
      <h3
        class="heading heading--size-headline-sm filters-drawer__title"
        id=":rc:"
      >
        Filters
      </h3>
      <button
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral button button--icon"
        type="button"
      >
        <svg
          class="icon"
          fill="currentColor"
          height="1.5rem"
          role="img"
          style="--icon-size: 1.5rem;"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            close filters
          </title>
          <path
            d="M18.3 5.71c-.39-.39-1.02-.39-1.41 0L12 10.59 7.11 5.7c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
          />
        </svg>
      </button>
    </header>
    <div
      class="drawer__body filters-drawer__body filters-drawer"
    >
      <fieldset
        class="fieldset filters-fieldset"
      >
        <legend
          class="fieldset-legend filters-fieldset__legend"
        >
          Filters Segment 1
           
        </legend>
        <div
          class="fieldset-items filters-fieldset__checkboxes"
        >
          <div
            class="checkbox"
          >
            <input
              class="checkbox__input"
              id=":rd:"
              type="checkbox"
            />
            <label
              class="label label--lg"
              for=":rd:"
            >
              Filters long label 1 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
            </label>
          </div>
          <div
            class="checkbox"
          >
            <input
              class="checkbox__input"
              id=":re:"
              type="checkbox"
            />
            <label
              class="label label--lg"
              for=":re:"
            >
              Filters label 2
            </label>
          </div>
          <div
            class="checkbox"
          >
            <input
              class="checkbox__input"
              id=":rf:"
              type="checkbox"
            />
            <label
              class="label label--lg"
              for=":rf:"
            >
              Filters label 3
            </label>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="fieldset filters-fieldset"
      >
        <legend
          class="fieldset-legend filters-fieldset__legend"
        >
          Filters Segment 2
           
        </legend>
        <div
          class="fieldset-items filters-fieldset__checkboxes"
        >
          <div
            class="checkbox"
          >
            <input
              class="checkbox__input"
              id=":rg:"
              type="checkbox"
            />
            <label
              class="label label--lg"
              for=":rg:"
            >
              Filters label 1
            </label>
          </div>
          <div
            class="checkbox"
          >
            <input
              class="checkbox__input"
              id=":rh:"
              type="checkbox"
            />
            <label
              class="label label--lg"
              for=":rh:"
            >
              Filters long label 2 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
            </label>
          </div>
          <div
            class="checkbox"
          >
            <input
              class="checkbox__input"
              id=":ri:"
              type="checkbox"
            />
            <label
              class="label label--lg"
              for=":ri:"
            >
              Filters label 3
            </label>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="fieldset filters-fieldset"
      >
        <legend
          class="fieldset-legend filters-fieldset__legend"
        >
          Filters Segment 3
           
        </legend>
        <div
          class="fieldset-items filters-fieldset__checkboxes"
        >
          <div
            class="checkbox"
          >
            <input
              class="checkbox__input"
              id=":rj:"
              type="checkbox"
            />
            <label
              class="label label--lg"
              for=":rj:"
            >
              Filters label 1
            </label>
          </div>
          <div
            class="checkbox"
          >
            <input
              class="checkbox__input"
              id=":rk:"
              type="checkbox"
            />
            <label
              class="label label--lg"
              for=":rk:"
            >
              Filters label 2
            </label>
          </div>
          <div
            class="checkbox"
          >
            <input
              class="checkbox__input"
              id=":rl:"
              type="checkbox"
            />
            <label
              class="label label--lg"
              for=":rl:"
            >
              Filters long label 3 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
            </label>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="fieldset filters-fieldset"
      >
        <legend
          class="fieldset-legend filters-fieldset__legend"
        >
          Filters Segment 4
           
        </legend>
        <div
          class="fieldset-items filters-fieldset__checkboxes"
        >
          <div
            class="checkbox"
          >
            <input
              class="checkbox__input"
              id=":rm:"
              type="checkbox"
            />
            <label
              class="label label--lg"
              for=":rm:"
            >
              Filters label 1
            </label>
          </div>
          <div
            class="checkbox"
          >
            <input
              class="checkbox__input"
              id=":rn:"
              type="checkbox"
            />
            <label
              class="label label--lg"
              for=":rn:"
            >
              Filters label 2
            </label>
          </div>
          <div
            class="checkbox"
          >
            <input
              class="checkbox__input"
              id=":ro:"
              type="checkbox"
            />
            <label
              class="label label--lg"
              for=":ro:"
            >
              Filters label 3
            </label>
          </div>
          <div
            class="checkbox"
          >
            <input
              class="checkbox__input"
              id=":rp:"
              type="checkbox"
            />
            <label
              class="label label--lg"
              for=":rp:"
            >
              Filters label 4
            </label>
          </div>
          <div
            class="checkbox"
          >
            <input
              class="checkbox__input"
              id=":rq:"
              type="checkbox"
            />
            <label
              class="label label--lg"
              for=":rq:"
            >
              Filters label 5
            </label>
          </div>
          <div
            class="checkbox"
          >
            <input
              class="checkbox__input"
              id=":rr:"
              type="checkbox"
            />
            <label
              class="label label--lg"
              for=":rr:"
            >
              Filters label 6
            </label>
          </div>
        </div>
      </fieldset>
    </div>
    <footer
      class="drawer__footer filters-drawer__footer"
    >
      <div
        class="button-group button-group--spacing-1x footer__button-group"
      >
        <button
          class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary footer__button"
          type="button"
        >
          Clear All
        </button>
        <button
          class="clickable-style clickable-style--lg clickable-style--primary clickable-style--brand button button--primary footer__button"
          type="button"
        >
          Apply
        </button>
      </div>
    </footer>
  </article>
</div>
`;

exports[`<Filters /> WithOnApplyAndCustomButtonGroup story renders snapshot 1`] = `
<div
  aria-hidden="false"
  class="drawer__container drawer__container--is-active filters-drawer__container"
>
  <article
    aria-labelledby=":r8:"
    aria-modal="true"
    class="drawer filters-drawer"
    role="dialog"
    tabindex="0"
  >
    <header
      class="drawer__header"
    >
      <h3
        class="heading heading--size-headline-sm filters-drawer__title"
        id=":r8:"
      >
        Filters
      </h3>
      <button
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral button button--icon"
        type="button"
      >
        <svg
          class="icon"
          fill="currentColor"
          height="1.5rem"
          role="img"
          style="--icon-size: 1.5rem;"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            close filters
          </title>
          <path
            d="M18.3 5.71c-.39-.39-1.02-.39-1.41 0L12 10.59 7.11 5.7c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
          />
        </svg>
      </button>
    </header>
    <div
      class="drawer__body filters-drawer__body"
    >
      <fieldset
        class="fieldset filters-fieldset"
      >
        <legend
          class="fieldset-legend filters-fieldset__legend"
        >
          Filters Segment 1
           
        </legend>
        <div
          class="fieldset-items filters-fieldset__checkboxes"
        >
          <div
            class="checkbox"
          >
            <input
              class="checkbox__input"
              id=":r9:"
              type="checkbox"
            />
            <label
              class="label label--lg"
              for=":r9:"
            >
              Filters label 1
            </label>
          </div>
          <div
            class="checkbox"
          >
            <input
              class="checkbox__input"
              id=":ra:"
              type="checkbox"
            />
            <label
              class="label label--lg"
              for=":ra:"
            >
              Filters label 2
            </label>
          </div>
          <div
            class="checkbox"
          >
            <input
              class="checkbox__input"
              id=":rb:"
              type="checkbox"
            />
            <label
              class="label label--lg"
              for=":rb:"
            >
              Filters label 3
            </label>
          </div>
        </div>
      </fieldset>
    </div>
    <footer
      class="drawer__footer filters-drawer__footer"
    >
      <div
        class="button-group button-group--spacing-1x footer__button-group button-group__apply-only"
      >
        <button
          class="clickable-style clickable-style--lg clickable-style--primary clickable-style--brand button button--primary footer__button"
          type="button"
        >
          Apply
        </button>
      </div>
    </footer>
  </article>
</div>
`;

exports[`<Filters /> WithOnClear story renders snapshot 1`] = `
<div
  aria-hidden="false"
  class="drawer__container drawer__container--is-active filters-drawer__container"
>
  <article
    aria-labelledby=":r4:"
    aria-modal="true"
    class="drawer filters-drawer"
    role="dialog"
    tabindex="0"
  >
    <header
      class="drawer__header"
    >
      <h3
        class="heading heading--size-headline-sm filters-drawer__title"
        id=":r4:"
      >
        Filters
      </h3>
      <button
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral button button--icon"
        type="button"
      >
        <svg
          class="icon"
          fill="currentColor"
          height="1.5rem"
          role="img"
          style="--icon-size: 1.5rem;"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            close filters
          </title>
          <path
            d="M18.3 5.71c-.39-.39-1.02-.39-1.41 0L12 10.59 7.11 5.7c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
          />
        </svg>
      </button>
    </header>
    <div
      class="drawer__body filters-drawer__body"
    >
      <fieldset
        class="fieldset filters-fieldset"
      >
        <legend
          class="fieldset-legend filters-fieldset__legend"
        >
          Filters Segment 1
           
        </legend>
        <div
          class="fieldset-items filters-fieldset__checkboxes"
        >
          <div
            class="checkbox"
          >
            <input
              class="checkbox__input"
              id=":r5:"
              type="checkbox"
            />
            <label
              class="label label--lg"
              for=":r5:"
            >
              Filters label 1
            </label>
          </div>
          <div
            class="checkbox"
          >
            <input
              class="checkbox__input"
              id=":r6:"
              type="checkbox"
            />
            <label
              class="label label--lg"
              for=":r6:"
            >
              Filters label 2
            </label>
          </div>
          <div
            class="checkbox"
          >
            <input
              class="checkbox__input"
              id=":r7:"
              type="checkbox"
            />
            <label
              class="label label--lg"
              for=":r7:"
            >
              Filters label 3
            </label>
          </div>
        </div>
      </fieldset>
    </div>
    <footer
      class="drawer__footer filters-drawer__footer"
    >
      <div
        class="button-group button-group--spacing-1x footer__button-group"
      >
        <button
          class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary footer__button"
          type="button"
        >
          Clear All
        </button>
      </div>
    </footer>
  </article>
</div>
`;
